Fixing images overflowing in css-grid

--- a/src/index.css
+++ b/src/index.css
@@ -28,6 +28,8 @@ h4 { font-size: 2.4em; }
 h5 { font-size: 2.0em; }
 h6 { font-size: 1.6em; }
 
+img { max-width: 100%; }
+
 .container {
   width: 80%;
   max-width: 1200px;
